--- a/Changes
+++ b/Changes
@@ -1,5 +1,34 @@
 Changes file for Task-Date-Holidays
 
+0.02 2014.08.29 maintenance release, update not required
+
+- Fixed POD error
+
+- Added Perl version requirement, POD syntax use requires 5.6
+
+
 0.01 2014.08.28 Initial release
 
 - First shot at a work package for Date::Holidays
+
+- Lists:
+
+    Date::Holidays::AT = 0
+    Date::Holidays::NO = 0
+    Date::Holidays::DK = 0
+    Date::Holidays::DE = 0
+    Date::Holidays::GB = 0
+    Date::Holidays::PT = 0
+    Date::Holidays::ES = 0
+    Date::Holidays::PL = 0
+    Date::Holidays::CZ = 0
+    Date::Holidays::KR = 0
+    Date::Holidays::SK = 0
+    Date::Holidays::FR = 0
+    Date::Holidays::BR = 0
+    Date::Holidays::CA_ES = 0
+    Date::Holidays::USFederal = 0
+    Date::Holidays::CA = 0
+    Date::Holidays::CN = 0
+    Date::Holidays::NZ = 0
+    Date::Holidays::AU = 0
