--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes file for Task-Date-Holidays
 
+0.05 2015-08-22 feature release, update not required
+
+- Reenabled Date::Holidays::PT, thanks to AMBS for patching it
+  so it will work again
+
+
 0.04 2015-01-31 feature release, update not required
 
 - Adding Date::Holidays::RU, contribution by Alexander Nalobin
