--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes file for Task-Date-Holidays
 
+0.08 2020-04-22 Feature release, update not required
+
+- Added Date::Holidays::UA, Ukraine
+
+
 0.07 2017-06-05 Maintenance release, update not required
 
 - Added CONTRIBUTING.md
