--- a/Changes
+++ b/Changes
@@ -1,5 +1,18 @@
 Changes file for Task-Date-Holidays
 
+0.09 2020-09-27 Feature release, update not required
+
+- Added Date::Holidays::AW, Aruba
+
+- Added Date::Holidays::KZ, Kazakhstan
+
+- Added Date::Holidays::NL, Netherlands
+
+- Reenabled Date::Holidays::CN, China
+
+- Added test suite
+
+
 0.08 2020-04-22 Feature release, update not required
 
 - Added Date::Holidays::UA, Ukraine
