--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes file for Task-Date-Holidays
 
+0.11 2022-03-07 Feature release, update not required
+
+- Specified requirement for Date::Holidays::FR to be version 0.04
+
 0.10 2020-09-29 Maintenance release, update not required
 
 - Added missing test requirements to the configuration
